plugins {
    id 'java'
    id 'application'
    id 'org.beryx.jlink' version '2.25.0'
}

group = 'io.aipanel'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

def junitVersion = '5.10.2'
def lombokVersion = '1.18.42'
def flatLafVersion = '3.7'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'io.aipanel.app.AIPanelApplication'

    applicationDefaultJvmArgs = [
            '-XX:-OmitStackTraceInFastThrow',

            '-Dsun.java2d.d3d=false',
            '-Dsun.java2d.ddoffscreen=false',
            '-Dsun.java2d.noddraw=true',
            '-Dsun.java2d.uiScale=1.0',
            '-Djogl.disable.openglcore=false',

            '--add-exports=java.base/java.lang=ALL-UNNAMED',
            '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
            '--add-exports=java.desktop/sun.java2d=ALL-UNNAMED',

            '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
            '--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED',
            '--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED'
    ]
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
    addOptions('--add-modules', 'java.desktop,java.naming,java.management,java.sql')
}

dependencies {
    implementation 'org.springframework:spring-context:7.0.3'
    implementation 'me.friwi:jcefmaven:141.0.10'
    implementation 'org.yaml:snakeyaml:2.2'
    implementation 'com.github.weisj:jsvg:2.0.0'
    implementation "com.formdev:flatlaf:$flatLafVersion"
    implementation "com.formdev:flatlaf-extras:$flatLafVersion"
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.27'

    // Lombok
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"

    // JUnit
    testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
